# LogDevice

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CNAME  CONTRIBUTING.md  LICENSE  README.md  help.html  index.html  sitemap.xml  users.html  versions.html
logdevice/: .clang-format  .flake8  .gitignore  CMakeLists.txt  Doxyfile  flake8_plugins  footer.html
logdevice/CMake/: FindCython.cmake  FindDoubleConversion.cmake  FindGFlags.cmake  FindGlog.cmake  FindJeMalloc.cmake  FindLZ4.cmake  FindLibDl.cmake  FindLibEvent.cmake  FindLibIberty.cmake  FindLibsodium.cmake  FindLibunwind.cmake  FindSnappy.cmake  FindSqlite.cmake  FindZookeeper.cmake  FindZstd.cmake  build-config.cmake  build-docs.cmake  build-fbthrift.cmake  build-fizz.cmake  build-fmt.cmake  build-folly.cmake  build-mstch.cmake  build-rocksdb.cmake  build-rsocket.cmake  build-wangle.cmake  logdevice-deps.cmake  logdevice-functions.cmake
logdevice/admin/: AdminAPIHandler.cpp  AdminAPIHandler.h  AdminAPIHandlerBase.cpp  AdminAPIHandlerBase.h  AdminAPIUtils.cpp  AdminAPIUtils.h  AdminCommandAPIHandler.cpp  AdminCommandAPIHandler.h  AdminCommandHandler.h  AdminServer.cpp  AdminServer.h  CMakeLists.txt  CheckImpactHandler.cpp  CheckImpactHandler.h  ClusterMembershipAPIHandler.cpp  ClusterMembershipAPIHandler.h  Conv.cpp  Conv.h  MaintenanceAPIHandler.cpp  MaintenanceAPIHandler.h  MetadataNodesetSelector.cpp  MetadataNodesetSelector.h  NodesConfigAPIHandler.cpp  NodesConfigAPIHandler.h  NodesStateAPIHandler.cpp  NodesStateAPIHandler.h  SettingOverrideTTLRequest.cpp  SettingOverrideTTLRequest.h  SimpleAdminServer.cpp  SimpleAdminServer.h  toString.cpp  toString.h
logdevice/build_tools/: Doxyfile.client-api  build_detect_platform  centos-7.deps  fedora-25.deps  fedora.deps  ubuntu.deps  ubuntu_cleanup.deps  ubuntu_runtime.deps
logdevice/common/: AbortAppendersEpochRequest.cpp  AbortAppendersEpochRequest.h  Address.h  AdminCommandTable-fwd.h  AdminCommandTable-inl.h  AdminCommandTable.cpp  AdminCommandTable.h  AllSequencers.cpp  AllSequencers.h  AppendProbeController.cpp  AppendProbeController.h  AppendRequest.cpp  AppendRequest.h  AppendRequestBase.cpp  AppendRequestBase.h  Appender.cpp  Appender.h  AppenderBuffer.cpp  AppenderBuffer.h  AppenderPrep.cpp  AppenderPrep.h  AppenderTracer.cpp  AppenderTracer.h  AtomicOptional.h  AtomicsMap.h  AuthoritativeStatus.cpp  AuthoritativeStatus.h  BWAvailableCallback.cpp  BWAvailableCallback.h  BackoffTimer.h  BatchedBufferDisposer.h  BoycottTracer.cpp  BoycottTracer.h  BucketedNodeStats.h  BuildInfo.cpp  BuildInfo.h  CMakeLists.txt  CheckNodeHealthRequest.cpp  CheckNodeHealthRequest.h  CheckSealRequest.cpp  (+524 more)
logdevice/debian/: .gitignore  changelog  control  copyright  rules
logdevice/doc/: buffered-writer.md  client-api.md  headers-dependencies.md  ldbench.md  partially-trimmed.md  rejecting-stores-based-on-copyset.md  single-copy-delivery.md  weighted-copyset-selector-locality.ipynb  weighted-copyset-selector-locality.md
logdevice/examples/: CMakeLists.txt  buffered_writer.cpp  cat.cpp  logdevice.conf  parse_target_log.cpp  parse_target_log.h  tail.cpp  tail_async.cpp  tail_flags.h  trim.cpp  write.cpp
logdevice/include/: AsyncCheckpointedReader.h  AsyncReader.h  BufferedWriteDecoder.h  BufferedWriter.h  CheckpointStore.h  CheckpointStoreFactory.h  CheckpointedReaderBase.h  CheckpointedReaderFactory.h  Client.h  ClientFactory.h  ClientSettings.h  ClusterAttributes.h  ConfigSubscriptionHandle.h  EnumMap.h  Err.h  LogAttributes.h  LogHeadAttributes.h  LogTailAttributes.h  LogsConfigTypes.h  NodeLocationScope.h  PermissionActions.h  README  Reader.h  Record.h  RecordOffset.h  SyncCheckpointedReader.h  VersionedConfigStore.h  debug.h  errors.inc  node_location_scopes.inc  strong_typedef.h  types.h
logdevice/lib/: AppendErrorInjector.cpp  AppendErrorInjector.h  AsyncReader.cpp  AsyncReaderImpl.cpp  AsyncReaderImpl.h  BufferedWriteDecoder.cpp  BufferedWriter.cpp  CMakeLists.txt  CheckpointStoreFactory.cpp  CheckpointStoreImpl.cpp  CheckpointStoreImpl.h  ClientBuiltinPluginProvider.cpp  ClientBuiltinPluginProvider.h  ClientFactory.cpp  ClientImpl.cpp  ClientImpl.h  ClientMessageDispatch.cpp  ClientMessageDispatch.h  ClientPluginHelper.cpp  ClientPluginHelper.h  ClientPluginPack.cpp  ClientPluginPack.h  ClientProcessor.cpp  ClientProcessor.h  ClientSettings.cpp  ClientSettingsImpl.cpp  ClientSettingsImpl.h  ClientWorker.cpp  ClientWorker.h  ClusterAttributesImpl.h  LogsConfigTypesImpl.h  NODE_STATS_REPLY_onReceived.cpp  NODE_STATS_REPLY_onReceived.h  NODE_STATS_onSent.cpp  NODE_STATS_onSent.h  NodeStatsHandler.cpp  NodeStatsHandler.h  NodeStatsMessageCallback.h  Reader.cpp  RemoteLogsConfig.cpp  (+2 more)
logdevice/ops/: CMakeLists.txt  README.md  setup.py
logdevice/replication_checker/: CMakeLists.txt  LogErrorTracker.cpp  LogErrorTracker.h  ReplicationCheckerSettings.cpp  ReplicationCheckerSettings.h  main.cpp
logdevice/scribe/: ScribeServer.cpp  ScribeServiceHandler.cpp  ScribeServiceHandler.h
logdevice/server/: AdminCommand.h  AdminCommandFactory.cpp  AdminCommandFactory.h  AdminServer.h  AuditLogFile.cpp  AuditLogFile.h  CHECK_NODE_HEALTH_onReceived.cpp  CHECK_NODE_HEALTH_onReceived.h  CHECK_SEAL_onReceived.cpp  CHECK_SEAL_onReceived.h  CMakeLists.txt  CleanedResponseRequest.cpp  CleanedResponseRequest.h  CommandListener.cpp  CommandListener.h  CommandSelector.cpp  CommandSelector.h  ConnectionListener.cpp  ConnectionListener.h  DATA_SIZE_onReceived.cpp  DATA_SIZE_onReceived.h  DELETE_LOG_METADATA_onReceived.cpp  DELETE_LOG_METADATA_onReceived.h  DELETE_onReceived.cpp  DELETE_onReceived.h  EpochMetaDataZRQ.h  EpochRecordCache.cpp  EpochRecordCache.h  EpochRecordCacheEntry.cpp  EpochRecordCacheEntry.h  FINDKEY_onReceived.cpp  FINDKEY_onReceived.h  FailureDetector.cpp  FailureDetector.h  FindKeyStorageTask.cpp  FindKeyStorageTask.h  FixedKeysMap.h  GAP_onSent.cpp  GAP_onSent.h  GET_EPOCH_RECOVERY_METADATA_REPLY_onReceived.cpp  (+160 more)
logdevice/test/: AdminCommandsIntegrationTest.cpp  AppendErrorInjectorIntegrationTest.cpp  AppendIntegrationTest.cpp  AppendProbeIntegrationTest.cpp  (+61 more)
(+2063 files in other folders)
